# zaojia-zhisuan

./: .env.local.example  .gitignore  AGENTS.md  CHANGELOG - 【归档】.md  CHANGELOG.md  README.md  package-lock.json  package.json  【MOC】大尾巴待办同步.md  【项目例子】【测试输入】可行性研究勘察测量控制价计算 -v3.0【批注-完备】 .xlsx  启动管勘智算-Tauri-MVP.bat  启动管勘智算-【codex】.bat  启动飞书第二层机器人.bat  备份PRD.bat  备份代码.bat  导出给其他AI查看-核心代码与规则.bat  检查管勘智算状态-【codex】.bat  管勘智算启动器-【codex】.ps1  项目介绍-给人看的版本-【codex】.md
00-PRD/: 00-PRD工作方式说明.md  00-产品总览.md  02-当前版本计划.md  03-UI设计规范.md  03-整体UI设计PRD.md  04-PRD一致性巡检.md
03-【匹配规则】-勘察测绘知识库-匹配规则提炼/: 【术语归并】术语归并与匹配放宽规则表 - 副本 (2).xlsx  【术语归并】术语归并与匹配放宽规则表.xlsx  【重要匹配规则】【第一层】-标准规则命中表-说人话版-v1.0.xlsx  【重要匹配规则】要素1-5和单位的匹配模式介绍.md  【重要匹配规则】项目以及总体匹配规则介绍.md
80-【子模块】功能点助手/: README.md
backend/: feishu_bot_runner.py  requirements-runtime.txt  requirements.txt
config/: project-default-settings.json
deploy/: install_cloud_runtime_guard.sh
docs/: Tauri桌面壳MVP说明.md  云服务器部署说明.md  统信UOS兼容性开发说明.md  绿色版说明.md  评委运行版说明.md  问问智算项目知识记忆说明.md  飞书第二层机器人说明.md
frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
scripts/: start-linux.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
tools/: archive_code.py  archive_prd.py  build_experience_database.py  build_green_release.py  build_judge_release.py  build_tauri_release.py  check_feishu_deployment.py  check_platform_compat.py  check_prd_consistency.py  export_ai_review_bundle.py  export_ai_review_bundle_window.ps1  run_tauri.ps1  (+1 more)
(+155 files in other folders)
